# Programmers-Dojo

./: .gitignore
Mandelbrot/: CMakeLists.txt  GPUCompute.h  Mandelbrot.cpp  cpuCompute.h  fragment.glsl  imgui.ini  mandelbrot.glsl  mandelbrot.h  shader.h  vertex.glsl
prime-generator/: Makefile  segmented-sieve.c  sieve.c  trial-division.c
